drbd-9.0.25-2/drbd/.compat_test.4.18.20/have_bio_flush.stderr
<command-line>:0:0: warning: "KBUILD_MODNAME" redefined
<command-line>:0:0: note: this is the location of the previous definition
/root/Code/All/drbd-9.0.25-2/drbd/drbd-kernel-compat/tests/have_bio_flush.c:4:6: error: variable ‘dummy’ has initializer but incomplete type
 enum bio_rw_flags dummy = BIO_FLUSH;
      ^~~~~~~~~~~~
/root/Code/All/drbd-9.0.25-2/drbd/drbd-kernel-compat/tests/have_bio_flush.c:4:27: error: ‘BIO_FLUSH’ undeclared here (not in a function); did you mean ‘L1D_FLUSH’?
 enum bio_rw_flags dummy = BIO_FLUSH;
                           ^~~~~~~~~
                           L1D_FLUSH
/root/Code/All/drbd-9.0.25-2/drbd/drbd-kernel-compat/tests/have_bio_flush.c:4:19: error: storage size of ‘dummy’ isn’t known
 enum bio_rw_flags dummy = BIO_FLUSH;
                   ^~~~~
